--- a/melbournesydney/package.json
+++ b/melbournesydney/package.json
@@ -22,6 +22,7 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "gatsby-plugin-emotion": "^4.0.6",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "prettier": "^1.17.0"
   },
   "keywords": [
